--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <div class="container">
-        <a href="friv.com"><button class="bot">friv</button></a>
+    <div 
+        <a href="friv.com"><button class="bot">logan</button></a>
+        <a href="friv.com"><button class="bot2">2010</button></a>
+        <a href="friv.com"><button class="bot3">sei la</button></a>
+        <a href="friv.com"><button class="bot4">logan</button></a>
+        <a href="friv.com"><button class="bot5">2010</button></a>
+        <a href="friv.com"><button class="bot6">sei la</button></a>
     </div>
-    <img class="foto" src="Textured-Black-Tile-BY6001G-.jpg">
-
+    <img class="foto" src="https://th.bing.com/th/id/OIP.f2e1PZbhg0bY82a0VNBVFgHaEO?rs=1&pid=ImgDetMain">
+    <img class="graf" src="Captura de tela 2024-04-19 201616.png">
+    <img class="carro" src="https://cdn.motor1.com/images/mgl/oQRk7/s1/renault-logan-up-2010-versao-especial-chega-bem-equipada-por-r-34800.jpg">
     </body>
 </html>
