qualidade-do-motor

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div 
         <a href="friv.com"><button class="bot">logan</button></a>
         <a href="friv.com"><button class="bot2">2010</button></a>
-        <a href="friv.com"><button class="bot3">sei la</button></a>
-        <a href="friv.com"><button class="bot4">logan</button></a>
-        <a href="friv.com"><button class="bot5">2010</button></a>
-        <a href="friv.com"><button class="bot6">sei la</button></a>
+        <a href="friv.com"><button class="bot3">Renault</button></a>
+        <a href="friv.com"><button class="bot4">N° motor</button></a>
+        <a href="friv.com"><button class="bot5">Quilometros rodados</button></a>
+        <a href="friv.com"><button class="bot6">L/km</button></a>
     </div>
     <img class="foto" src="https://th.bing.com/th/id/OIP.f2e1PZbhg0bY82a0VNBVFgHaEO?rs=1&pid=ImgDetMain">
     <img class="graf" src="Captura de tela 2024-04-19 201616.png">
